new file digest API endpoint
