# app/controllers/stash_api/files_controller.rb
@@ -30,6 +30,13 @@ module StashApi
       render json: file.metadata
     end
 
+    # GET /files/digest/<digest>
+    def digest
+      files = StashEngine::DataFile.joins(:resource).where(resource: {file_view: true}, digest: params[:digest])
+      paged = files.limit(per_page).offset(per_page * (page - 1)).map { |file| StashApi::File.new(file_id: file.id, user: @user).metadata }
+      render json: files_output(files.count, paged)
+    end
+
     # GET /versions/<version-id>/files
     def index
       files = paged_files_for_version
